--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="es">
 <head>
   <!---Meta--->
+  <meta name="google-site-verification" content="cnin325wmkATsgYStHK_ZnBsIqKjmJNhjlpmQ0cLi60" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Lo digital que necesitas, donde hacemos las cosas bien">
