--- a/index.html
+++ b/index.html
@@ -126,5 +126,6 @@
   </footer>
 
   <script src="javascript.js"></script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4983394875313605" crossorigin="anonymous"></script>
 </body>
 </html>
